--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,13 @@ body {
 }
 
 td {
-    height: 500px;
+    height: 400px;
     width: 200px;
+    border: 5px solid;
+    text-align: center;
+    justify-content: center;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
 }
 
 button {
@@ -22,6 +27,10 @@ button {
     -moz-border-radius: 10px;
     border-radius: 10px;
     font-size: xx-large;
+    margin: 20px;
+    width: 300px;
+    height: 100px;
+    border: 5px solid black;
 }
 
 #slots{
