--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 html, body {
     height: 100vh;
     margin: 0;
+    background-color: grey;
 }
 
 body {
@@ -8,17 +9,23 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 40px;
+    font-size: 30px;
+}
+
+h1 {
+    color: white;
 }
 
 td {
-    height: 400px;
-    width: 200px;
-    border: 5px solid;
+    color: white;
+    height: 200px;
+    width: 100px;
+    border: 5px solid white;
     text-align: center;
     justify-content: center;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
+    border-radius: 10px;
 }
 
 button {
@@ -26,13 +33,15 @@ button {
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
-    font-size: xx-large;
-    margin: 20px;
-    width: 300px;
-    height: 100px;
-    border: 5px solid black;
+    font-size: large;
+    margin: 10px;
+    width: 150px;
+    height: 50px;
+    border: 5px solid white;
+    color: white;
+    background-color: grey;
 }
 
 #slots{
-    border: 4px solid;
+    border: 4px solid white;
 }
