--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,23 @@
-html, body {
+html {
+    background-image: url(/imgs/background.jpg);
+    background-size: cover;
+}
+
+body {
     height: 100vh;
     margin: 0;
-    background-color: #081631;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 30px;
-    
+    font-family: 'Righteous', cursive;
 }
 
 h1 {
     color: white;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
+    font-size: 80px;
 }
 
 td {
@@ -26,11 +31,12 @@ td {
     -moz-border-radius: 10px;
     border-radius: 10px;
     background-color: #081631;
-    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
+    background-color: transparent;
 }
 
 img {
     box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;;
+    background-color: transparent;
 }
 
 button {
@@ -39,11 +45,13 @@ button {
     -moz-border-radius: 10px;
     border-radius: 10px;
     font-size: large;
+    font-family: 'Righteous', cursive;
     margin: 10px;
     width: 150px;
     height: 50px;
-    border: 5px solid white;
+    border: 5px solid #0073e6;
     color: white;
     background-color: #081631;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
+    box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;;
 }
