--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,11 @@ h1 {
     font-size: 80px;
 }
 
+h3 {
+    color: white;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
+}
+
 td {
     color: white;
     height: 200px;
