--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ h1 {
 h3 {
     color: white;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
+    display: inline-block;
 }
 
 td {
