fix bug, set function to bet balance displaying correct amount if the balance resets in between rounds

--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,13 @@ body {
 }
 
 h1 {
-    color: white;
+    color: whitesmoke;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
     font-size: 80px;
 }
 
 h3 {
-    color: white;
+    color: whitesmoke;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
     display: inline-block;
 }
