change background image to link t o imgur file

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url(/imgs/background.jpg);
+    background-image: url(https://i.imgur.com/lkrlqxi.jpg);
     background-size: cover;
 }
 
